# ec2launcher

./: .gitignore  Makefile  Pipfile  README.md  ec2launcher  foolaunch  foolaunch.py  pyproject.toml  setup.py
foo/: launch.py
foolaunch/: __init__.py  foolaunch.py
footstrap/: __init__.py  ec2launcher.py
src/: __init__.py
src/foolaunch/: __init__.py  __main__.py
