[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "foolaunch"
version = "1.2.0"
authors = [
  { name="Lynn Gabbay", email="gabbay@gmail.com" },
]
description = "A utility for launching an ec2 server from a repository of templates."
readme = "README.md"
requires-python = ">=3.6, <4"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
license = {text = "MIT License"}
dependencies = [
    "foostache~=1.3",
    "boto~=2.49",
    "boto3~=1.26",
]

[project.urls]
Homepage = "https://github.com/ldgabbay/foolaunch"

[project.scripts]
foolaunch = "foolaunch.__main__:main"
